if no comments, space for comment box returns null (helps with spacing). also, button no longer have blue focus background for updating ratings adn reviews

--- a/client/src/components/RateSaved/style.css
+++ b/client/src/components/RateSaved/style.css
@@ -40,10 +40,12 @@ input {
 #rate-btn:hover, #rate-btn:focus {
   font-size: 1rem;
   color: black !important;
+  background-color: transparent;
 }
 
 #rating-submit-btn {
   width: 100%;
+  color: black;
   border: none !important;
   padding: 0px !important;
   margin-bottom: 2px !important;
@@ -53,9 +55,10 @@ input {
   height: 25px;
 }
 
-#rating-submit-btn:hover {
+#rating-submit-btn:hover, #rating-submit-btn:focus {
   color: black !important;
   font-weight: 700;
+  background-color: transparent;
 }
 /* #ffc107
 #e4e5e9 */
